Fix key overlap that appeared on some screens of the '2' key over the '0' key, by adding an invisible div to even out the columns

--- a/style.css
+++ b/style.css
@@ -111,3 +111,8 @@ key:active {
 #equals {  
     height: 2.55em;
 }
+
+#special {
+    height: 1.2em;
+    visibility: hidden;
+  }
